--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body header .navbar nav ul li:hover{
 
 body header .navbar nav ul li a{
     text-decoration: none;
-    font-size: 2.3rem;
+    font-size: 1.8rem;
 }
 
 
@@ -129,6 +129,7 @@ body main .social-midia{
 }
 
 body main .social-midia ul{
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -149,6 +150,8 @@ body main .social-midia ul li{
 
 body main .social-midia ul li:hover{
     background-color: var(--darkambar);
+    border-color: var(--darkambar);
+
 }
 
 body main .social-midia ul li i{
@@ -165,7 +168,7 @@ body footer{
 
 body footer p{
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 
@@ -176,3 +179,107 @@ laptop: 992px
 tablet:768px
 phone:480px 
 */
+
+@media(max-width: 1200px){
+    /*header*/
+    body header .navbar img{
+        width: 180px;
+        max-width: 15vh;
+    }
+
+    body header .navbar nav ul li a{
+        font-size: 1.3rem;
+    }
+
+
+    /*main*/
+    body main .text-content h1{
+        font-size: 5rem;
+    }
+
+    body main .text-content h1 span{
+        font-size: 2rem;
+        transform: translateY(20px);
+
+    }
+    
+    body main .text-content h2{
+        font-size: 1.25rem;
+        transform: translateY(-20px);
+
+    }
+    
+    body main .text-content p{
+        font-size: 1.1rem;
+        width: 400px;
+    }
+
+    body main .text-content button{
+        width: 240px;
+        height: 60px;
+        border-radius: 60px;
+  
+    }
+
+    body main .social-midia ul li{
+        width: 48px;
+        height: 48px;
+    }
+
+    body main .social-midia ul li i{
+        font-size: 1.4rem;
+    }
+
+}
+
+@media(max-width: 992px){
+    body{
+        padding: 2.5vh 2.5vw; 
+    }
+    /*header*/
+    body header .navbar img{
+        width: 180px;
+        max-width: 12vh;
+    }
+
+    body header .navbar nav ul li a{
+        font-size: 1.1rem;
+    }
+
+
+    /*main*/
+    body main .text-content h1{
+        font-size: 4.5rem;
+    }
+
+    body main .text-content h1 span{
+        font-size: 1.7rem;
+    }
+    
+    body main .text-content h2{
+        font-size: 1.13rem;
+    }
+    
+    body main .text-content p{
+        font-size: 0.8rem;
+        width: 360px;
+    }
+
+    body main .text-content button{
+        width: 200px;
+        height: 50px;
+        font-size: 1.1rem;
+        
+  
+    }
+
+    body main .social-midia ul li{
+        width: 40px;
+        height: 40px;
+    }
+
+    body main .social-midia ul li i{
+        font-size: 1.3rem;
+    }
+
+}
