--- a/style.css
+++ b/style.css
@@ -16,16 +16,10 @@ ul{
     list-style: none;
 }
 
-html{
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden !important;
-}
-
 body{
+    max-width: 100vw;
     height: 100vh;
-    width: 100vw;
-    overflow: hidden !important;
+    overflow: hidden;
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.80) 30%, rgba(0, 0, 0, 0.60) 50%, rgba(0, 0, 0, 0.20)), 
     url(Midia/background.jpg);
     background-size: cover;
@@ -207,23 +201,38 @@ body footer p{
     font-size: 1rem;
 }
 
+
+/* video */
+
 div.trailer-video.active{
     top: 0vh;
+    z-index: 100;
+    opacity: 1;
+    animation: ViodeoTansition 1s;
+}
+
+@keyframes ViodeoTansition {
+    0%{
+        top: -100vh;
+    }
+    100%{
+        top: 0vh;
+    }
 }
 
 .trailer-video{
     display: flex;
-    
     justify-content: center;
     align-items: center;
     flex-direction: column;
     position: absolute;
-    top: 100vh;
+    top: 0vh;
     left: 0px;
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
+    z-index: -100;
+    opacity: 0;
     transition: all 1s;
 }
 
@@ -256,6 +265,126 @@ laptop: 992px
 tablet:768px
 phone:480px 
 */
+
+
+
+@media (min-width: 2160px) {
+    
+    /*header*/
+    body header .navbar img{
+        width: 220px;
+        max-width: 15vh;
+    }
+
+    body header .navbar nav ul li a{
+        font-size: 2.5rem;
+    }
+
+
+    /*main*/
+    body main .text-content h1{
+        font-size: 9rem;
+    }
+
+    body main .text-content h1 span{
+        font-size: 3rem;
+        transform: translateY(20px);
+
+    }
+    
+    body main .text-content h2{
+        font-size: 2.2rem;
+        transform: translateY(-20px);
+
+    }
+    
+    body main .text-content p{
+        font-size: 1.5rem;
+        width: 700px;
+    }
+
+    body main .text-content button{
+        width: 380px;
+        height: 90px;
+        border-radius: 60px;
+        font-size: 2rem;
+    }
+
+    body main .social-midia ul li{
+        width: 100px;
+        height: 100px;
+    }
+
+    body main .social-midia ul li i{
+        font-size: 3.2rem;
+    }
+
+    body footer p{
+        font-size: 1.5rem;
+    }
+
+}
+
+@media (min-width: 2560px) {
+    
+    /*header*/
+    body header .navbar img{
+        width: 520px;
+        max-width: 18vh;
+    }
+
+    body header .navbar nav ul{
+        gap: 40px;
+    }
+
+    body header .navbar nav ul li a{
+        font-size: 3rem;
+    }
+
+
+    /*main*/
+    body main .text-content h1{
+        font-size: 10.5rem;
+    }
+
+    body main .text-content h1 span{
+        font-size: 3.8rem;
+        transform: translateY(20px);
+
+    }
+    
+    body main .text-content h2{
+        font-size: 2.6rem;
+        transform: translateY(-20px);
+
+    }
+    
+    body main .text-content p{
+        font-size: 1.8rem;
+        width: 780px;
+    }
+
+    body main .text-content button{
+        width: 440px;
+        height: 110px;
+        border-radius: 60px;
+        font-size: 2.5rem;
+    }
+
+    body main .social-midia ul li{
+        width: 120px;
+        height: 120px;
+    }
+
+    body main .social-midia ul li i{
+        font-size: 3.6rem;
+    }
+
+    body footer p{
+        font-size: 1.7rem;
+    }
+
+}
 
 @media(max-width: 1200px){
     /*header*/
@@ -351,12 +480,12 @@ phone:480px
     }
 
     body main .social-midia ul li{
-        width: 40px;
-        height: 40px;
+        width: 32px;
+        height: 32px;
     }
 
     body main .social-midia ul li i{
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
 }
@@ -399,8 +528,8 @@ phone:480px
         height: 2px;
         background-color: white;
         transform: translateY(-10px);
+        transition: all .6s;
       
-
     }
 
     body header .navbar nav li div.toogle-menu{
@@ -408,7 +537,7 @@ phone:480px
         width: 19px;
         height: 2px;
         background-color: white;
-        transition: all 0.4s;
+        transition: all .6s;
     }
 
     body header .navbar nav li div.toogle-menu::after{
@@ -435,16 +564,32 @@ phone:480px
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content{
         position: absolute;
-        top: -30px;
-        right: -60vw;
+        top: -100vh;
+        right: 0vw;
         background-color: rgba(0, 0, 0, 0.6);
         height: 100vh;
         width: 50vw;
+        display: block;
         transition: all 1s;
+        opacity: 0;
     }
 
     body header .navbar nav li.toogle-menu-box.active .toogle-menu-content{
         right: -30px;
+        top: -30px;
+        z-index: 100;
+        opacity: 1;
+        animation: MenuTansition 1s;
+    }
+
+    @keyframes MenuTansition {
+        0%{
+            top: -30px;
+            right: -60vw;
+        }
+        100%{
+            right: -30px;
+        }
     }
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content ul{
@@ -461,12 +606,12 @@ phone:480px
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons{
         display: flex;
-        gap: 20px;
+        gap: 10px;
     }
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li{
-     width: 40px;
-     height: 40px;
+     width: 28px;
+     height: 28px;
      border-radius: 50%;
      border: 2px solid white;
      display: flex;
@@ -476,7 +621,7 @@ phone:480px
     }
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li i{
-        font-size: 1.2rem;
+        font-size: 0.8rem;
     }
 
     body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li:hover{
@@ -520,4 +665,35 @@ phone:480px
 
 }
 
+
+@media (max-width: 480px) {
+    body main .text-content h1{
+        font-size: 3rem;
+    }
+
+    body main .text-content h1 span{
+        font-size: 1.1rem;
+        transform: translateY(15px)
+    }
+    
+    body main .text-content h2{
+        font-size: 0.74rem;
+        transform: translateY(-5px)
+    }
+    
+    body main .text-content p{
+        font-size: 0.5rem;
+        width: 260px;
+    }
+
+    body main .text-content button{
+        width: 140px;
+        height: 35px;
+        font-size: 0.8rem;
+    }
+
+    body footer p{
+        font-size: 0.5rem;
+    }
+}
 
