--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body{
 
 body header{
     max-width: 90vw;
+    min-height: 10vh ;
+        
 }
 
 
@@ -443,38 +445,43 @@ phone:480px
         padding: 2.5vh 2.5vw; 
     }
     /*header*/
+
+    body header{
+    height: 80px;
+    }
+
     body header .navbar img{
         width: 180px;
-        max-width: 12vh;
+        max-width: 14vh;
     }
 
     body header .navbar nav ul li a{
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
 
     /*main*/
     body main .text-content h1{
-        font-size: 4.5rem;
+        font-size: 4rem;
     }
 
     body main .text-content h1 span{
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
     
     body main .text-content h2{
-        font-size: 1.13rem;
+        font-size: 1rem;
     }
     
     body main .text-content p{
-        font-size: 0.8rem;
-        width: 360px;
+        font-size: 0.7rem;
+        width: 320px;
     }
 
     body main .text-content button{
-        width: 200px;
-        height: 50px;
-        font-size: 1.1rem;
+        width: 160px;
+        height: 40px;
+        font-size: 1rem;
         
   
     }
@@ -486,6 +493,10 @@ phone:480px
 
     body main .social-midia ul li i{
         font-size: 1.1rem;
+    }
+
+    body footer p{
+        font-size: 0.6rem;
     }
 
 }
@@ -513,8 +524,6 @@ phone:480px
         position: absolute;
         top: 30px;
         right: 30px;
-        z-index: 100;
-
     }
 
     body header .navbar nav li.toogle-menu-box:hover{
@@ -529,7 +538,7 @@ phone:480px
         background-color: white;
         transform: translateY(-10px);
         transition: all .6s;
-      
+        z-index: 1000;
     }
 
     body header .navbar nav li div.toogle-menu{
@@ -538,6 +547,7 @@ phone:480px
         height: 2px;
         background-color: white;
         transition: all .6s;
+        z-index: 1000;
     }
 
     body header .navbar nav li div.toogle-menu::after{
@@ -547,6 +557,7 @@ phone:480px
         height: 2px;
         background-color: white;
         margin-top: 7px;
+        z-index: 1000;
     }
 
 
@@ -604,27 +615,28 @@ phone:480px
         display: block;
     }
 
-    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons{
+    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul ul#icons{
         display: flex;
+        flex-direction: row;
         gap: 10px;
     }
 
-    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li{
+    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul ul#icons li{
      width: 28px;
      height: 28px;
      border-radius: 50%;
-     border: 2px solid white;
+     border: 1px solid white;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 0;
     }
 
-    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li i{
+    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul ul#icons li i{
         font-size: 0.8rem;
     }
 
-    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul div.icons li:hover{
+    body header .navbar nav li.toogle-menu-box .toogle-menu-content ul ul#icons li:hover{
         background-color: unset !important;
     }
 
@@ -649,9 +661,9 @@ phone:480px
     }
 
     body main .text-content button{
-        width: 160px;
-        height: 40px;
-        font-size: 0.9rem;
+        width: 140px;
+        height: 35px;
+        font-size: 0.85rem;
     }
 
     body main .social-midia{
@@ -660,13 +672,13 @@ phone:480px
 
     body footer p{
         text-align: center;
-        font-size: 0.7rem;
+        font-size: 0.5rem;
     }
 
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 360px) {
     body main .text-content h1{
         font-size: 3rem;
     }
@@ -687,13 +699,103 @@ phone:480px
     }
 
     body main .text-content button{
-        width: 140px;
-        height: 35px;
+        width: 130px;
+        height: 32px;
         font-size: 0.8rem;
     }
 
     body footer p{
-        font-size: 0.5rem;
+        font-size: 0.4rem;
     }
 }
 
+
+
+/*
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.content-slider {
+  margin: 0 auto;
+  max-width: 80vw;
+  min-width: 300px;
+  height: 400px;
+  position: absolute;
+  overflow: hidden;
+}
+
+.slider {
+  width: 300%;
+  height: 100%;
+  display: flex;  
+}
+
+.barra-slide {
+  width: 33.33%;
+  height: 100%;
+  display: flex;
+  background-color: translate;
+  transition: all .8s;
+}
+
+.barra-slide:first-child{
+    margin-left: -33.33%;
+}
+
+.slide {
+  width: 33.33%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.6s;
+}
+
+.slide img {
+  width: 90%;
+  height: 90%;
+}
+
+.actionbtn {
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 30px;
+  background-color: rgba(0, 0, 0, 0.405);
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.contain-slide .actionbutton:hover {
+  background-color: rgba(0, 0, 0, 0.805);
+}
+
+.actionbtn span {
+  font: bold 32px Arial;
+  color: white;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%);
+}
+
+#prev {
+  left: 0;
+}
+
+#prev span {
+  left: 10px;
+}
+
+#next {
+  right: 0px;
+}
+
+#next span {
+  right: -10px;
+}
+
+
+*/
