--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ body header .navbar nav ul li:hover{
 body header .navbar nav ul li a{
     text-decoration: none;
     font-size: 1.8rem;
+    cursor: pointer;
 }
 
 
@@ -261,13 +262,113 @@ div.trailer-video.active{
 }
 
 
+/*characters*/
+
+.characters-background.active{
+    display: flex;
+}
+
+.characters-background{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.characters-background .close-slides{
+    position: absolute;
+    top: 3vh;
+    right: 3vw;
+    font-size: 2.5rem;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 2px solid white;
+    outline: none;
+    z-index: 100;
+    transition: all .4s;
+}
+
+.characters-background .close-slides:hover{
+    background-color: var(--ambar);
+}
+
+div.characters-container{
+    width: 80vw;
+    height: 27vw;
+    max-width: 1536px;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+}
+
+.characters-background .characters-container .action-btn{
+    position: absolute;
+    top: 50%;
+    
+}
+
+.characters-background .characters-container .action-btn span {
+    font-size: 3vw;
+    cursor: pointer;
+    transition: all 0.6s;
+}
+
+.characters-background .characters-container .action-btn span:hover{
+    color: var(--darkambar);
+    font-size: 3.5vw;
+}
+
+.characters-background .characters-container .action-btn.btn-prev{
+    left: 0;
+}
+
+.characters-background .characters-container .action-btn.btn-next{
+    right: 0;
+}
+
+.characters-background .characters-container .characters-slides{
+    display: flex;
+    width: 300%;
+}
+
+.characters-background .characters-container .characters-slides .chatacters-bar{
+    width: 80vw;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    transition: all 0.8s;
+}
+
+.characters-background .characters-container .characters-slides .chatacters-bar:first-child{
+    margin-left: -33.33%;
+}
+
+.characters-background .characters-container .characters-slides .chatacters-bar .character-slide{
+    width: 30%;
+    text-align: center;
+    height: 100%;
+}
+
+.characters-background .characters-container .characters-slides .chatacters-bar .character-slide img{
+width: 90%;
+}
+
+
+
+
 /*Breakpoint
 desktop: 1200px
 laptop: 992px
 tablet:768px
 phone:480px 
 */
-
 
 
 @media (min-width: 2160px) {
